Introduce rendering of all supported formats

--- a/inst/rmarkdown/templates/reports/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/reports/skeleton/skeleton.Rmd
@@ -2,7 +2,9 @@
 title: "Weekly Web & Social Media Report"
 author: "Press Unit"
 output:
-  word_document: default
+  pdf_document
+  word_document
+  html_document
 params:
   data: ""
 ---
