Reconfigure the entire report

--- a/inst/rmarkdown/templates/reports/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/reports/skeleton/skeleton.Rmd
@@ -30,6 +30,8 @@ data <- params$data
 *Period:* 
 `r paste(format(Sys.Date() - 6, "%d %B"), "to", format(Sys.Date(), "%d %B %Y"))`
 
+# Website
+
 ```{r web prep}
 date.standard <- "1970-01-01"
 
@@ -52,6 +54,20 @@ mth_news <- webnews %>%
 wk_news <- webnews %>%
   filter(as.Date(Date) >= today() - 7)
 ```
+
+| **News Stories** |    **Result**                              |
+|------------------|--------------------------------------------|
+| All-time         | `r nrow(webnews)`                          |
+| In `r thisMth`   | `r nrow(mth_news)`                         |
+| Last 7 days      | `r nrow(wk_news)`                          |
+| Most recent      | `r webnews$Title[which.max(webnews$Date)]` |
+|                  |                                            |
+
+```{r web time-series}
+make_ts(data = data$webnews, platform = 'website')
+```
+
+# Twitter
 
 ```{r twt prep, message=FALSE}
 ## Process tweets by reconverting date field to POSIXct type 
@@ -91,6 +107,66 @@ busy.day  <- which.max(table(wk.data$date_only))
 busy.day  <- ymd(names(busy.day))
 ```
 
+
+|     **Description**          |    **Result**                                      |
+|------------------------------|----------------------------------------------------|
+| In `r format(today(), "%B")` | `r nrow(mth_data)`                                 |
+| In last 7 days               | `r no.wk`                                          |
+| Posts made                   | `r nrow(twts.by.nesrea)`                           |
+| Daily average                | `r floor(nrow(wk.data)/7)`                         |
+| Most active on               | `r format(busy.day, "%d %B")`                      |
+| Most liked                   | `r wk.data$text[which.max(wk.data$favoriteCount)]` |
+| Most retweeted               | `r wk.data$text[which.max(wk.data$retweetCount)]`  |
+| Comparative activity         | **`r no.wk - nrow(last_wk)`**                      |
+|                              |                                                    |
+<!-- TODO: Add No. of followers (overall) & new followers (in last 7 days) -->
+
+```{r tweet time-series}
+make_ts(data = data$tweets, platform = 'twitter')
+## TODO: Implement month & year transitions
+```
+```{r plain density, warning=FALSE, message=FALSE}
+simplePlot <- dens_plot(data = wk.data, platform = "twitter")
+simplePlot +
+  theme(axis.text.y = element_blank(), axis.ticks.y = element_blank())
+```
+```{r daily tweets plot}  
+simplePlot +
+  facet_grid(day ~ .) +
+  theme(axis.text.y = element_blank(), axis.ticks.y = element_blank())
+```
+```{r disaggregated tweets density}
+ggplot(wk.data, aes(created)) +
+  geom_density(aes(fill = Type), alpha = .5) +
+  theme(legend.justification = c(1, 1), legend.position = c(1, 1)) +
+  ggtitle(paste("Distribution of tweets")) +
+  xlab("Date")
+```
+```{r twitter sentiments dotchart-1}
+spl <- split(wk.data, wk.data$isRetweet)
+origTwts <- spl[['FALSE']]
+
+twPol <- compute_emotional_valence(origTwts$text)
+visualise_pol_diff(pol.list = twPol)
+```
+```{r twitter sentiment extremes}
+origTwts$emotionalValence <- sapply(twPol, function(x) x$all$polarity)
+```
+
+* __Most positive tweet__: `r origTwts$text[which.max(origTwts$emotionalValence)]`
+* __Most negative tweet__: `r origTwts$text[which.min(origTwts$emotionalValence)]` 
+
+```{r, twitter wordcloud}
+generate_wordcloud(origTwts, twPol, site = "Twitter")
+```
+```{r tweets network}
+## TODO
+RT <- mutate(spl[['TRUE']], sender = substr(text, 5, regexpr(':', text) - 1))
+```
+
+
+# Facebook
+
 ```{r fb prep, message=FALSE}
                         ############
                         # Facebook #
@@ -124,120 +200,6 @@ wk_Posts <- mth_Posts %>%
   filter(created_time >= (today() - 6))
 ```
 
-# Time Series
-```{r web time-series}
-useBase <- TRUE
-make_ts(data = data$webnews, platform = 'website', base = useBase)
-```
-
-```{r tweet time-series}
-make_ts(data = data$tweets, platform = 'twitter', base = useBase)
-## TODO: Implement month & year transitions
-```
-
-```{r fb time-series}
-make_ts(data = data$fbposts, platform = 'facebook', base = useBase)
-```
-
-# Frequency Distributions
-## Twitter
-```{r plain density, warning=FALSE, message=FALSE}
-simplePlot <- dens_plot(data = wk.data, platform = "twitter")
-simplePlot +
-  theme(axis.text.y = element_blank(), axis.ticks.y = element_blank())
-```
-
-```{r daily tweets plot}  
-simplePlot +
-  facet_grid(day ~ .) +
-  theme(axis.text.y = element_blank(), axis.ticks.y = element_blank())
-```
-
-```{r disaggregated tweets density}
-ggplot(wk.data, aes(created)) +
-  geom_density(aes(fill = Type), alpha = .5) +
-  theme(legend.justification = c(1, 1), legend.position = c(1, 1)) +
-  ggtitle(paste("Distribution of tweets")) +
-  xlab("Date")
-```
-
-## Facebook
-```{r density dist: fb posts}
-ggplot(fbPosts, aes(created_time)) +
-  geom_density(fill = "purple", alpha = 0.6) +
-  ggtitle("Distribution of Facebook posts")
-```
-
-```{r density dist: FB comments}
-dens_plot(fbComments, platform = "facebook")
-```
-
-# Sentiment Analysis
-## Twitter
-```{r twitter sentiments dotchart-1}
-spl <- split(wk.data, wk.data$isRetweet)
-origTwts <- spl[['FALSE']]
-
-twPol <- compute_emotional_valence(origTwts$text)
-visualise_pol_diff(pol.list = twPol)
-```
-
-```{r twitter sentiment extremes}
-origTwts$emotionalValence <- sapply(twPol, function(x) x$all$polarity)
-```
-
-* __Most positive tweet__: `r origTwts$text[which.max(origTwts$emotionalValence)]`
-* __Most negative tweet__: `r origTwts$text[which.min(origTwts$emotionalValence)]` 
-
-```{r, twitter wordcloud}
-generate_wordcloud(origTwts, twPol, site = "Twitter")
-```
-
-## Facebook
-```{r fb polarities}
-fbPol <- compute_emotional_valence(text.var = fbComments$message)
-visualise_pol_diff(pol.list = fbPol)
-```
-  
-```{r facebook wordcloud}
-fbComments$emotionalValence <- sapply(fbPol, function(x) x$all$polarity)
-generate_wordcloud(fbComments, fbPol, site = "Facebook")
-```
-
-# Engagement
-## Twitter
-
-```{r network}
-## TODO
-RT <- mutate(spl[['TRUE']], sender = substr(text, 5, regexpr(':', text) - 1))
-```
-
-
-# Summary Tables
-## Website
-| **News Stories** |    **Result**                              |
-|------------------|--------------------------------------------|
-| All-time         | `r nrow(webnews)`                          |
-| In `r thisMth`   | `r nrow(mth_news)`                         |
-| Last 7 days      | `r nrow(wk_news)`                          |
-| Most recent      | `r webnews$Title[which.max(webnews$Date)]` |
-|                  |                                            |
-
-## Twitter
-|     **Description**          |    **Result**                                      |
-|------------------------------|----------------------------------------------------|
-| In `r format(today(), "%B")` | `r nrow(mth_data)`                                 |
-| In last 7 days               | `r no.wk`                                          |
-| Posts made                   | `r nrow(twts.by.nesrea)`                           |
-| Daily average                | `r floor(nrow(wk.data)/7)`                         |
-| Most active on               | `r format(busy.day, "%d %B")`                      |
-| Most liked                   | `r wk.data$text[which.max(wk.data$favoriteCount)]` |
-| Most retweeted               | `r wk.data$text[which.max(wk.data$retweetCount)]`  |
-| Comparative activity         | **`r no.wk - nrow(last_wk)`**                      |
-|                              |                                                    |
-<!-- TODO: Add No. of followers (overall) & new followers (in last 7 days) -->
-
-## Facebook
 |     **Description**        |    **Result**                            |
 |----------------------------|------------------------------------------|
 |NESREA Page Posts (All-time)|`r nrow(fbPosts)`                         |
@@ -249,3 +211,24 @@ RT <- mutate(spl[['TRUE']], sender = substr(text, 5, regexpr(':', text) - 1))
 |Most Shared in `r thisMth`  |`r return_text(mth_Posts, "shares_count")`|
 |Most Commented  (Overall)   |`r return_text(fbPosts, "comments_count")`|
 |                            |                                          |
+
+```{r fb time-series}
+make_ts(data = data$fbposts, platform = 'facebook')
+```
+```{r density dist: fb posts}
+ggplot(fbPosts, aes(created_time)) +
+  geom_density(fill = "purple", alpha = 0.6) +
+  ggtitle("Distribution of Facebook posts")
+```
+```{r density dist: FB comments}
+dens_plot(fbComments, platform = "facebook")
+```
+```{r fb polarities}
+fbPol <- compute_emotional_valence(text.var = fbComments$message)
+visualise_pol_diff(pol.list = fbPol)
+```
+```{r facebook wordcloud}
+fbComments$emotionalValence <- sapply(fbPol, function(x) x$all$polarity)
+generate_wordcloud(fbComments, fbPol, site = "Facebook")
+```
+
