--- a/inst/rmarkdown/templates/reports/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/reports/skeleton/skeleton.Rmd
@@ -63,7 +63,7 @@ wk_news <- webnews %>%
 | Most recent      | `r webnews$Title[which.max(webnews$Date)]` |
 |                  |                                            |
 
-```{r web time-series}
+```{r web time-series, warning=FALSE}
 make_ts(data = data$webnews, platform = 'website')
 ```
 
@@ -121,7 +121,7 @@ busy.day  <- ymd(names(busy.day))
 |                              |                                                    |
 <!-- TODO: Add No. of followers (overall) & new followers (in last 7 days) -->
 
-```{r tweet time-series}
+```{r tweet time-series, warning=FALSE}
 make_ts(data = data$tweets, platform = 'twitter')
 ## TODO: Implement month & year transitions
 ```
@@ -212,7 +212,7 @@ wk_Posts <- mth_Posts %>%
 |Most Commented  (Overall)   |`r return_text(fbPosts, "comments_count")`|
 |                            |                                          |
 
-```{r fb time-series}
+```{r fb time-series, warning=FALSE}
 make_ts(data = data$fbposts, platform = 'facebook')
 ```
 ```{r density dist: fb posts}
